<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kwik Thinker</string>
    <string name="ma_title_text">KWIK THINKER</string>
    <string name="percent_correct">Percent Correct</string>
    <string name="numYes"># "Yes"</string>
    <string name="numNo"># "No"</string>
    <string name="numCorrect"># correct</string>
    <string name="title_activity_game_mode">KT Endless Mode</string>
    <string name="start_game_mode_button_text">Enter Endless Mode</string>
    <string name="endless_mode_countdown">5</string>
    <string name="EM_START_BUTT_TEXT">Start!</string>
    <string name="play_again">Play Again?</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="GenUUID">Generate UUID</string>
    <string name="UUID">UUID</string>
    <string name="QuestionText">Question text</string>
    <string name="AppDevedByAuthors">An app developed by\nChris Sprague and Gio Carvelli</string>
    <string name="ans1">Answer #1</string>
    <string name="ans2">Answer #2</string>
    <string name="ViewOnGitHub">View Project on GitHub</string>
    <string name="CorrectAnswerIndex">Correct answer index (0 or 1)</string>
    <string name="NumCorrectAnswers">Number of correct answers</string>
    <string name="NumIncorrectAnswers">Number of incorrect answers</string>
    <string name="SubmitToServer">Submit to server</string>
    <string name="feedbackImageViewDescription">This image view spawns the pictures and animation giving visual feedback to the user whether or not they got the question correct.</string>

</resources>
