<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/EM_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.css.kwikthinker.GameMode">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="500sp"
        android:textSize="125px"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:id="@+id/countdownTV"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="100sp" />

    <LinearLayout android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EM_START_BUTT_TEXT"
        android:textSize="50dp"
        android:id="@+id/start_em_countdown"
        android:layout_gravity="center|bottom"
        android:onClick="onStartClick"
        android:layout_marginBottom="100sp" />

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:indeterminate="false"
        android:indeterminateOnly="false"
        android:layout_height="75dp"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        android:id="@+id/playAgainButton"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="100dp"
        android:onClick="onStartClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_overlay"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/correctNumValue"
        android:layout_gravity="right|center_vertical"
        android:layout_marginBottom="250dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_overlay"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/numYesValue"
        android:layout_gravity="right|center_vertical"
        android:layout_marginBottom="200dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_overlay"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/numNoValue"
        android:layout_gravity="right|center_vertical"
        android:layout_marginBottom="150dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_overlay"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/numNo"
        android:id="@+id/numNoLabel"
        android:visibility="invisible"
        android:layout_gravity="left|center_vertical"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_overlay"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/numYes"
        android:id="@+id/numYesLabel"
        android:visibility="invisible"
        android:layout_gravity="left|center_vertical"
        android:layout_marginBottom="200dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_overlay"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/numCorrect"
        android:id="@+id/numCorrectLabel"
        android:visibility="invisible"
        android:layout_gravity="left|center_vertical"
        android:layout_marginBottom="250dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_overlay"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/percent_correct"
        android:id="@+id/averageLabel"
        android:visibility="invisible"
        android:layout_gravity="left|center_vertical"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/black_overlay"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/averageValue"
        android:layout_gravity="right|center_vertical"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="20dp" />

    <ImageView
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:id="@+id/answerFeedbackImageView"
        android:contentDescription="@string/feedbackImageViewDescription"
        android:layout_gravity="center"
        android:layout_marginBottom="50sp"/>

</FrameLayout>
